--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Version: 1.3.0
 Date:    2007/8/25
 Title: R support for SBML, using libsbml
 Author:  Michael Lawrence <lawremi@iastate.edu>
-Depends: R (>= 2.6.0), graph, methods
+Depends: R (>= 2.6.0), graph, methods, utils
 SystemRequirements: libsbml =2.3.4
 Maintainer: Michael Lawrence <lawremi@iastate.edu>
 Description: Links R to libsbml for SBML parsing, validating output, 
