--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: rsbml
-Version: 1.5.0
-Date:    2007/8/25
+Version: 1.5.1
+Date:    2008/1/16
 Title: R support for SBML, using libsbml
 Author:  Michael Lawrence <lawremi@iastate.edu>
 Depends: R (>= 2.6.0), graph, methods, utils
-SystemRequirements: libsbml =2.3.4
+SystemRequirements: libsbml (=2.3.4, >=3.0.3)
 Maintainer: Michael Lawrence <lawremi@iastate.edu>
 Description: Links R to libsbml for SBML parsing, validating output, 
   provides an S4 SBML DOM, converts SBML to R graph objects.
