--- a/configure.in
+++ b/configure.in
@@ -25,7 +25,7 @@ if test [ -n "${LIBSBML_INCLUDE}" ] ; then
   LIBSBML_CPPFLAGS="-I${LIBSBML_INCLUDE}"
 elif test [ -n "${LIBSBML3_CFLAGS}" ]; then
   LIBSBML_CPPFLAGS="${LIBSBML3_CFLAGS}"
-else LIBSBML_CPPFLAGS="-I/usr/include/sbml -I/usr/local/include -I/usr/local/include/sbml"
+else LIBSBML_CPPFLAGS="-I/usr/local/include"
 fi
 CPPFLAGS="${CPPFLAGS} ${LIBSBML_CPPFLAGS}"
 
