--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,2 +1,2 @@
-PKG_CPPFLAGS = @LIBSBML_CPPFLAGS@ @RSBML_CPPFLAGS@
+PKG_CPPFLAGS = @LIBSBML_CPPFLAGS@ @SOSLIB_CPPFLAGS@ @RSBML_CPPFLAGS@
 PKG_LIBS = @LIBS@
