--- a/configure.in
+++ b/configure.in
@@ -39,7 +39,7 @@ if test "${LIBSBML3}" != "no"; then
   RSBML_CPPFLAGS="-DLIBSBML3"
 else
   AC_CHECK_HEADER([sbml/xml/ParseMessage.h],, 
-    AC_MSG_ERROR([Could not find sbml/SBMLDocument.h: 
+    AC_MSG_ERROR([Could not find sbml/xml/ParseMessage.h: 
       rsbml requires libsbml from http://www.sbml.org/software/libsbml/
       use --with-libsbml-include or LIBSBML_INCLUDE to specify the include path.]))
   AC_CHECK_LIB([sbml], [SBMLDocument_create],,
