Don't initialize eventDelay to NULL in Event. Remove legacy signal constructor method to fix vignette.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@32017 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: rsbml
-Version: 1.99.2
+Version: 1.99.3
 Date:    2008/5/29
 Title: R support for SBML, using libsbml
 Author:  Michael Lawrence <lawremi@iastate.edu>
 Depends: R (>= 2.6.0), graph, methods, utils
 SystemRequirements: libsbml (=2.3.4, >=3.0.3)
-Maintainer: Michael Lawrence <lawremi@iastate.edu>
+Maintainer: Michael Lawrence <lawremi@fhcrc.edu>
 Description: Links R to libsbml for SBML parsing, validating output, 
   provides an S4 SBML DOM, converts SBML to R graph objects. Optionally 
   links to the SBML ODE Solver Library (SOSLib) for simulating models.
