--- a/configure.in
+++ b/configure.in
@@ -48,32 +48,35 @@ else
 fi
 
 ## give user option of using SOSlib
-AC_ARG_ENABLE(soslib, [  --enable-soslib[=yes|no|system]          Enable SOSLib (simulation) support, 'yes' by default if libsbml 3.0.2 or higher detected.])
-
-if test "${LIBSBML3}" != "no" && test -z "${enable_soslib}"; then
-  enable_soslib="yes"
-fi
+AC_ARG_ENABLE(soslib, [  --enable-soslib[=yes|no|system]          Enable SOSLib (simulation) support])
 
 if test "${enable_soslib}" != "no"; then
   if test "${enable_soslib}" == "system";  then
-    PKG_CHECK_MODULES(SOSLIB, [libODES >= 1.7.0], [SOSLIB="yes"])
+    PKG_CHECK_MODULES(SOSLIB, [libODES >= 1.7.0], [SOSLIB="yes"], [SOSLIB="no"])
   else
+    AC_MSG_NOTICE([=== Begin local SOSLib build ===])
     SOURCE_DIR=`pwd`/local
     cd inst/SBML_odeSolver-1.7.0beta
     if test -z "${SOSLIB_CONFIGURE_ARGS}"; then
       SOSLIB_CONFIGURE_ARGS="--without-xerces --with-sundials=/usr"
     fi
     SOSLIB_CONFIGURE_ARGS="${SOSLIB_CONFIGURE_ARGS} --prefix=${SOURCE_DIR}"
-    ./configure ${SOSLIB_CONFIGURE_ARGS}
-    make
-    make install
-    SOSLIB_CFLAGS="-I${SOURCE_DIR}/include"
-    SOSLIB_LIBS="-L${SOURCE_DIR}/lib -lODES"
+    SOSLIB="no"
+    if ./configure ${SOSLIB_CONFIGURE_ARGS} && make && make install; then
+        SOSLIB_CFLAGS="-I${SOURCE_DIR}/include"
+        SOSLIB_LIBS="-L${SOURCE_DIR}/lib -lODES"
+        SOSLIB="yes"
+    fi
     cd ../..
+    AC_MSG_NOTICE([=== End local SOSLib build ===]) 
   fi
-  RSBML_CPPFLAGS="${RSBML_CPPFLAGS} -DSOSLIB ${SOSLIB_CFLAGS}"
-  LIBS="${LIBS} ${SOSLIB_LIBS}"
-  LIBS="${LIBS} -lsundials_kinsol -lsundials_cvodes -lsundials_nvecserial"
+  if test "${SOSLIB}" == "yes"; then
+     RSBML_CPPFLAGS="${RSBML_CPPFLAGS} -DSOSLIB ${SOSLIB_CFLAGS}"
+     LIBS="${LIBS} ${SOSLIB_LIBS}"
+     LIBS="${LIBS} -lsundials_kinsol -lsundials_cvodes -lsundials_nvecserial"
+  elif test -n "${enable_soslib}"; then
+     AC_MSG_ERROR([SOSLib support requested, but prequisites failed])  
+  fi
 fi
 
 AC_SUBST(RSBML_CPPFLAGS)
