- Fix configuration issues with SOSlib (not finding libsbml). - Add "describe" method for generating short character descriptions of objects in the DOM. The 'show' method cats this to the console. - Remove a bunch of generated files that should not have been in svn. - Fix handling of MathML and(), xor(), etc (only for libsbml 3.2.0)
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@33383 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/SBML_odeSolver-1.7.0beta/Makefile.in
+++ b/inst/SBML_odeSolver-1.7.0beta/Makefile.in
@@ -134,6 +134,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PERL = @PERL@
+PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
 SBML_CFLAGS = @SBML_CFLAGS@
 SBML_LDFLAGS = @SBML_LDFLAGS@
@@ -251,9 +252,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  ./Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  ./Makefile
+	  $(AUTOMAKE) --gnu  Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
