--- a/inst/SBML_odeSolver-1.7.0beta/odeSolver/Makefile.in
+++ b/inst/SBML_odeSolver-1.7.0beta/odeSolver/Makefile.in
@@ -124,6 +124,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PERL = @PERL@
+PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
 SBML_CFLAGS = @SBML_CFLAGS@
 SBML_LDFLAGS = @SBML_LDFLAGS@
