--- a/inst/SBML_odeSolver-1.7.0beta/configure.in
+++ b/inst/SBML_odeSolver-1.7.0beta/configure.in
@@ -154,7 +154,7 @@ dnl ---------------------------------------------------------------------------
 dnl Output
 dnl ---------------------------------------------------------------------------
 
-AC_CONFIG_FILES([./Makefile])
+AC_CONFIG_FILES([Makefile])
 dnl AC_CONFIG_FILES([doc/Makefile])
 dnl AC_CONFIG_FILES([doc/SBML_odeSolver.1])
 AC_CONFIG_FILES([examples/Makefile])
