Fixes for building on win32.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@34263 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/SBML_odeSolver-1.7.0beta/configure.in
+++ b/inst/SBML_odeSolver-1.7.0beta/configure.in
@@ -85,7 +85,7 @@ CONFIG_LIB_GRACE
 CONFIG_LIB_GRAPHVIZ
 	
 CFLAGS="-g -O2 -Wno-unknown-pragmas -Wall -ansi -std=iso9899:1990"
-LIBS="-ldl -lm -lstdc++"
+LIBS="-lm -lstdc++"
 
 	  
 dnl add the CFLAGS and LDFLAGS for tcc online compilation
