--- a/inst/SBML_odeSolver-1.7.0beta/examples/Makefile
+++ b/inst/SBML_odeSolver-1.7.0beta/examples/Makefile
@@ -44,10 +44,7 @@ bin_PROGRAMS = defSeries$(EXEEXT) integrate$(EXEEXT) \
 subdir = examples
 DIST_COMMON = README $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/config/fpic.m4 \
-	$(top_srcdir)/config/grace.m4 $(top_srcdir)/config/graphviz.m4 \
-	$(top_srcdir)/config/sbml.m4 $(top_srcdir)/config/sundials.m4 \
-	$(top_srcdir)/configure.in
+am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -166,21 +163,12 @@ CXXFLAGS = -g -O2
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
-DOT = /usr/bin/dot
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
 EGREP = /bin/grep -E
 EXEEXT = 
 FPIC = -fPIC
-GRACE_CFLAGS = 
-GRACE_LDFLAGS = 
-GRACE_LIBS = 
-GRACE_RPATH = 
-GRAPHVIZ_CFLAGS = -I/usr/include/graphviz
-GRAPHVIZ_LDFLAGS = -L/usr/lib/graphviz
-GRAPHVIZ_LIBS = -lgvc
-GRAPHVIZ_RPATH = -Wl,-rpath,/usr/lib/graphviz
 GREP = /bin/grep
 HOST_TYPE = linux
 INSTALL = /usr/bin/install -c
@@ -190,13 +178,12 @@ INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LDFLAGS = 
 LIBOBJS = 
-LIBS = -lm -ldl -lm -lstdc++
+LIBS = -lm -lm -lstdc++
 LTLIBOBJS = 
 MAKE = /usr/bin/make
 MAKEINFO = ${SHELL} /home/larman/research/networks/rsbml/inst/SBML_odeSolver-1.7.0beta/config/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
-OLD_LIBSBML = 
 PACKAGE = SBML_odeSolver
 PACKAGE_BUGREPORT = {raim,xtof}@tbi.univie.ac.at
 PACKAGE_NAME = odeSolver
@@ -205,25 +192,13 @@ PACKAGE_TARNAME = SBML_odeSolver
 PACKAGE_VERSION = 1.7.0beta
 PATH_SEPARATOR = :
 PERL = /usr/bin/perl
-PKG_CONFIG = /usr/bin/pkg-config
 RANLIB = ranlib
-SBML_CFLAGS = -I/usr/include/libxml2  
-SBML_LDFLAGS = 
-SBML_LIBS = -lsbml -lstdc++ -lm -lxml2  
-SBML_RPATH = 
 SET_MAKE = 
 SHAREDLIBEXT = so
 SHELL = /bin/sh
 STRIP = 
-SUNDIALS_CFLAGS = -I/usr/include
-SUNDIALS_LDFLAGS = -L/usr/lib
-SUNDIALS_LIBS = -lsundials_kinsol -lsundials_cvodes -lsundials_nvecserial
 SWIG = /usr/bin/swig
 TestDataDirectory = $(srcdir)
-USE_GRACE = 0
-USE_GRAPHVIZ = 1
-USE_SBML = 1
-USE_SUNDIALS = 1
 VERSION = 1.7.0beta
 abs_builddir = /home/larman/research/networks/rsbml/inst/SBML_odeSolver-1.7.0beta/examples
 abs_srcdir = /home/larman/research/networks/rsbml/inst/SBML_odeSolver-1.7.0beta/examples
