Synchronize with latest CVS snapshot of SBML ODE Solver.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@34517 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/SBML_odeSolver-1.7.0beta/configure.in
+++ b/inst/SBML_odeSolver-1.7.0beta/configure.in
@@ -36,6 +36,11 @@ case $host_os in
     SHAREDLIBEXT="so"
     ;;
 
+  *aix*)
+    HOST_TYPE="aix"
+    SHAREDLIBEXT="a"
+    ;;
+
   *darwin*)
     HOST_TYPE="darwin"
     SHAREDLIBEXT="dylib"
@@ -49,8 +54,8 @@ AC_DEFINE_UNQUOTED([SHAREDLIBEXT], ".${SHAREDLIBEXT}",
 				    [shared library extrension])
 
 dnl Adding global compilation parameters
-dnl !!! remove -g -O2 for release ???     
-CFLAGS="-g -O2 -Wno-unknown-pragmas -Wall -ansi -std=iso9899:1990"
+dnl !!! remove -g -O2 -pg  for release ???     
+CFLAGS="-g -O2 -pg -Wno-unknown-pragmas -Wall -ansi -std=iso9899:1990"
 LIBS="-lm -lstdc++"	   
 AC_SUBST(CFLAGS)
 AC_SUBST(LIBS)	
@@ -83,9 +88,13 @@ CONFIG_LIB_SUNDIALS
 dnl CONFIG_LIB_TCC
 CONFIG_LIB_GRACE
 CONFIG_LIB_GRAPHVIZ
+
+dnl Adding global compilation parameters
+dnl !!! remove -g -O2 -pg  for release ???     
 	
+dnl CFLAGS="-g -O2  -pg -Wno-unknown-pragmas -Wall -ansi -std=iso9899:1990"
 CFLAGS="-g -O2 -Wno-unknown-pragmas -Wall -ansi -std=iso9899:1990"
-LIBS="-lm -lstdc++"
+LIBS="-ldl -lm -lstdc++"
 
 	  
 dnl add the CFLAGS and LDFLAGS for tcc online compilation
