Disable graphviz and grace support in SBML ODE Solver.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@34524 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/configure.in
+++ b/configure.in
@@ -57,7 +57,7 @@ if test "${enable_soslib}" != "no"; then
     AC_MSG_NOTICE([=== Begin local SOSLib build ===])
     SOURCE_DIR=`pwd`/local
     cd inst/SBML_odeSolver-1.7.0beta
-    SOSLIB_CONFIGURE_ARGS="${SOSLIB_CONFIGURE_ARGS} --prefix=${SOURCE_DIR}"
+    SOSLIB_CONFIGURE_ARGS="${SOSLIB_CONFIGURE_ARGS} --prefix=${SOURCE_DIR} --without-graphviz --without-grace"
     SOSLIB="no"
     if ./configure ${SOSLIB_CONFIGURE_ARGS} && make && make install; then
         SOSLIB_CFLAGS="-I${SOURCE_DIR}/include"
