--- a/inst/SBML_odeSolver-1.7.0beta/Makefile.in
+++ b/inst/SBML_odeSolver-1.7.0beta/Makefile.in
@@ -205,7 +205,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src odeSolver
+SUBDIRS = src
 EXTRA_DIST = Win32/* \
              OUTLOOK \
              SOSlib.doxy \
