--- a/inst/SBML_odeSolver-1.7.0beta/configure.in
+++ b/inst/SBML_odeSolver-1.7.0beta/configure.in
@@ -166,8 +166,8 @@ dnl ---------------------------------------------------------------------------
 AC_CONFIG_FILES([Makefile])
 dnl AC_CONFIG_FILES([doc/Makefile])
 dnl AC_CONFIG_FILES([doc/SBML_odeSolver.1])
-AC_CONFIG_FILES([examples/Makefile])
-AC_CONFIG_FILES([odeSolver/Makefile])
+dnl AC_CONFIG_FILES([examples/Makefile])
+dnl AC_CONFIG_FILES([odeSolver/Makefile])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([src/libODES.pc])
 dnl AC_CONFIG_FILES([src/inverse/Makefile])
