--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
-importFrom(stats, as.ts)
+importFrom(stats, as.ts, end, start, offset, simulate)
+importFrom(graphics, text)
 importClassesFrom(graph, graphNEL)
 
 exportPattern("^[^\\.]")
