Add utils to Depends to fix Windows-specific build issue
.onLoad calls utils::normalizePaths if the platform is Windows.  So we
should depend on utils.

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@42253 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: rsbml
 Version: 2.3.0
 Title: R support for SBML, using libsbml
 Author:  Michael Lawrence <mflawren@fhcrc.org>
-Depends: R (>= 2.6.0), methods
+Depends: R (>= 2.6.0), methods, utils
 Imports: graph, utils
 SystemRequirements: libsbml (=2.3.4, >=3.0.3)
 Maintainer: Michael Lawrence <mflawren@fhcrc.org>
