--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: rsbml
-Version: 2.7.0
+Version: 2.7.1
 Title: R support for SBML, using libsbml
-Author:  Michael Lawrence <mflawren@fhcrc.org>
+Author:  Michael Lawrence <michafla@gene.com>
 Depends: R (>= 2.6.0), methods, utils
 Imports: graph, utils
-SystemRequirements: libsbml (=2.3.4, >=3.0.3)
-Maintainer: Michael Lawrence <mflawren@fhcrc.org>
+SystemRequirements: libsbml (>=3.0.3)
+Maintainer: Michael Lawrence <michafla@gene.com>
 Description: Links R to libsbml for SBML parsing, validating output, 
   provides an S4 SBML DOM, converts SBML to R graph objects. Optionally 
   links to the SBML ODE Solver Library (SOSLib) for simulating models.
