--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: rsbml
-Version: 2.15.3
+Version: 2.15.4
 Title: R support for SBML, using libsbml
 Author:  Michael Lawrence <michafla@gene.com>
 Depends: R (>= 2.6.0), methods, utils
@@ -11,4 +11,4 @@ Description: Links R to libsbml for SBML parsing, validating output,
   links to the SBML ODE Solver Library (SOSLib) for simulating models.
 License: Artistic-2.0
 URL:  http://www.sbml.org
-biocViews: GraphsAndNetworks
+biocViews: GraphsAndNetworks, Pathways, NetworkAnalysis
