The 'annotation' and 'annotation<-' generics have been moved from Biobase (2.17.8) to BiocGenerics (0.3.2). All packages that 'setMethods' on these generics import them from BiocGenerics.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@69535 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
+importFrom(BiocGenerics, annotation, "annotation<-")
 importFrom(stats, as.ts, end, start, offset, simulate)
 importFrom(graphics, text)
 importClassesFrom(graph, graphNEL)
