--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: rsbml
-Version: 2.15.4
+Version: 2.15.5
 Title: R support for SBML, using libsbml
 Author:  Michael Lawrence <michafla@gene.com>
-Depends: R (>= 2.6.0), methods, utils
-Imports: graph, utils
+Depends: R (>= 2.6.0), BiocGenerics (>= 0.3.2), methods, utils
+Imports: BiocGenerics, graph, utils
 SystemRequirements: libsbml (>=3.0.3)
 Maintainer: Michael Lawrence <michafla@gene.com>
 Description: Links R to libsbml for SBML parsing, validating output, 
