--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: R support for SBML, using libsbml
 Author: Michael Lawrence <michafla@gene.com>
 Depends: R (>= 2.6.0), BiocGenerics (>= 0.3.2), methods, utils
 Imports: BiocGenerics, graph, utils
-SystemRequirements: libsbml (>=3.0.3)
+SystemRequirements: libsbml (==5.10.2)
 Maintainer: Michael Lawrence <michafla@gene.com>
 Description: Links R to libsbml for SBML parsing, validating output,
         provides an S4 SBML DOM, converts SBML to R graph objects.
